@@ -12,6 +12,7 @@
  *******************************************************************************/
 package org.eclipse.birt.data.engine.aggregation;
 
+import static org.junit.Assert.assertArrayEquals;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertTrue;
@@ -45,15 +46,21 @@ public class TotalTest {
 	private boolean[] doubleArray3TopBottom = { true, false, false, true, false, false, false, false };
 	private int[] doubleArray3RankDec = { 2, 4, 7, 1, 7, 3, 5, 5 };
 	private int[] doubleArray3RankAsc = { 7, 5, 1, 8, 1, 6, 3, 3 };
+
+	private int[] doubleArray3DenseRankDec = { 2, 4, 6, 1, 6, 3, 5, 5 };
+	private int[] doubleArray3DenseRankAsc = { 5, 3, 1, 6, 1, 4, 2, 2 };
+
 	private int[] doubleArray3PercentRank = { 857, 571, 0, 1000, 0, 714, 285, 285 };
-	private Object[] doubleArray3PercentSum = { new Integer(208), new Integer(41), null, new Integer(625), null,
-			new Integer(83), new Integer(20), new Integer(20) };
+	private Object[] doubleArray3PercentSum = { Integer.valueOf(208), Integer.valueOf(41), null, Integer.valueOf(625),
+			null, Integer.valueOf(83), Integer.valueOf(20), Integer.valueOf(20) };
 	private String[] str1 = { "4", "-43", "4", "23", "-15", "-6", "4", "-6", "3", "63", "33", "-6", "-23", "34" };
 	private double[] doubleArray4 = { 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 };
 	private double[] doubleArray5 = { 1, 2, 2, 3, 1, 3, 4, 1, 2 };
 	private double[] doubleArray6 = { 1, 2, 2, 3, 1, 3, 4, 2, 1 };
-	private Object[] anyObjectArray = { "aa", "bb", null, new Integer(0), null, new Double(1), new Float(0), null };
-	private Object[] anyObjectArray2 = { "aa", "bb", null, new Integer(0), null, new Double(1), new Float(0), null,
+	private Object[] anyObjectArray = { "aa", "bb", null, Integer.valueOf(0), null, Double.valueOf(1), new Float(0),
+			null };
+	private Object[] anyObjectArray2 = { "aa", "bb", null, Integer.valueOf(0), null, Double.valueOf(1), new Float(0),
+			null,
 			false, new Date(1000000L) };
 
 	private Date[] dates = { new Date(1000000L), new Date(2000000L), new Date(3000000L), new Date(4000000L) };
@@ -72,7 +79,7 @@ public class TotalTest {
 			new BigDecimal("6"), new BigDecimal("7") };
 
 	private int[] bigDecimalRankAsc = { 1, 2, 7, 4, 9, 13, 2, 4, 7, 11, 14, 15, 4, 9, 11 };
-
+	private int[] bigDecimalDenseRankAsc = { 1, 2, 4, 3, 5, 7, 2, 3, 4, 6, 8, 9, 3, 5, 6 };
 	private int[] bigDecimalPercentRank = { 0, 71, 428, 214, 571, 857, 71, 214, 428, 714, 928, 1000, 214, 571, 714
 
 	};
@@ -292,28 +299,28 @@ public class TotalTest {
 			ac.onRow(new Object[] { anyObjectArray[i] });
 		}
 		ac.finish();
-		assertEquals(new Integer(5), ac.getValue());
+		assertEquals(Integer.valueOf(5), ac.getValue());
 
 		ac.start();
 		for (int i = 0; i < anyObjectArray.length; i++) {
 			ac.onRow(null);
 		}
 		ac.finish();
-		assertEquals(new Integer(8), ac.getValue());
+		assertEquals(Integer.valueOf(8), ac.getValue());
 
 		ac.start();
 		for (int i = 0; i < doubleArray1.length; i++) {
 			ac.onRow(new Object[] {});
 		}
 		ac.finish();
-		assertEquals(new Integer(15), ac.getValue());
+		assertEquals(Integer.valueOf(15), ac.getValue());
 
 		ac.start();
 		for (int i = 0; i < doubleArray2.length; i++) {
 			ac.onRow(new Object[] {});
 		}
 		ac.finish();
-		assertEquals(new Integer(14), ac.getValue());
+		assertEquals(Integer.valueOf(14), ac.getValue());
 
 		ac.start();
 
@@ -321,11 +328,11 @@ public class TotalTest {
 			ac.onRow(new Object[] {});
 		}
 		ac.finish();
-		assertEquals(new Integer(14), ac.getValue());
+		assertEquals(Integer.valueOf(14), ac.getValue());
 
 		ac.start();
 		ac.finish();
-		assertEquals(new Integer(0), ac.getValue());
+		assertEquals(Integer.valueOf(0), ac.getValue());
 
 		ac.start();
 		try {
@@ -358,17 +365,17 @@ public class TotalTest {
 
 		ac.start();
 		for (int i = 0; i < doubleArray1.length; i++) {
-			ac.onRow(new Double[] { new Double(doubleArray1[i]) });
+			ac.onRow(new Double[] { Double.valueOf(doubleArray1[i]) });
 		}
 		ac.finish();
-		assertEquals(new Double(82.0), ac.getValue());
+		assertEquals(Double.valueOf(82.0), ac.getValue());
 
 		ac.start();
 		for (int i = 0; i < doubleArray2.length; i++) {
-			ac.onRow(new Double[] { new Double(doubleArray2[i]) });
+			ac.onRow(new Double[] { Double.valueOf(doubleArray2[i]) });
 		}
 		ac.finish();
-		assertEquals(new Double(69.0), ac.getValue());
+		assertEquals(Double.valueOf(69.0), ac.getValue());
 
 		ac.start();
 		for (int i = 0; i < str1.length; i++) {
@@ -418,7 +425,7 @@ public class TotalTest {
 		// test Total.sum() for heterogeneous Number array data
 		{
 			Number numberArray[] = { BigDecimal.ZERO, BigDecimal.ONE, BigDecimal.TEN, Double.valueOf("0.1"),
-					new BigDecimal("0.1"), new BigDecimal(0.1D), new BigDecimal("0.1"), new Double(0.1D), };
+					new BigDecimal("0.1"), new BigDecimal(0.1D), new BigDecimal("0.1"), Double.valueOf(0.1D), };
 			ac.start();
 			for (int i = 0; i < numberArray.length; i++) {
 				ac.onRow(new Object[] { numberArray[i] });
@@ -493,9 +500,9 @@ public class TotalTest {
 			double sum = 0D;
 			ac.start();
 			for (int i = 0; i < doubleArray1.length; i++) {
-				ac.onRow(new Double[] { new Double(doubleArray1[i]) });
+				ac.onRow(new Double[] { Double.valueOf(doubleArray1[i]) });
 				sum += doubleArray1[i];
-				assertEquals(new Double(sum), ac.getValue());
+				assertEquals(Double.valueOf(sum), ac.getValue());
 			}
 			ac.finish();
 		}
@@ -504,9 +511,9 @@ public class TotalTest {
 			double sum = 0D;
 			ac.start();
 			for (int i = 0; i < doubleArray2.length; i++) {
-				ac.onRow(new Double[] { new Double(doubleArray2[i]) });
+				ac.onRow(new Double[] { Double.valueOf(doubleArray2[i]) });
 				sum += doubleArray2[i];
-				assertEquals(new Double(sum), ac.getValue());
+				assertEquals(Double.valueOf(sum), ac.getValue());
 			}
 			ac.finish();
 		}
@@ -560,24 +567,24 @@ public class TotalTest {
 
 		ac.start();
 		for (int i = 0; i < doubleArray1.length; i++) {
-			ac.onRow(new Double[] { new Double(doubleArray1[i]) });
+			ac.onRow(new Double[] { Double.valueOf(doubleArray1[i]) });
 		}
 		ac.finish();
-		assertEquals(new Double(5.466666666666667), ac.getValue());
+		assertEquals(Double.valueOf(5.466666666666667), ac.getValue());
 
 		ac.start();
 		for (int i = 0; i < doubleArray2.length; i++) {
-			ac.onRow(new Double[] { new Double(doubleArray2[i]) });
+			ac.onRow(new Double[] { Double.valueOf(doubleArray2[i]) });
 		}
 		ac.finish();
-		assertEquals(new Double(4.928571428571429), ac.getValue());
+		assertEquals(Double.valueOf(4.928571428571429), ac.getValue());
 
 		ac.start();
 		for (int i = 0; i < str1.length; i++) {
 			ac.onRow(new Object[] { str1[i] });
 		}
 		ac.finish();
-		assertEquals(new Double(4.928571428571429), ac.getValue());
+		assertEquals(Double.valueOf(4.928571428571429), ac.getValue());
 
 		ac.start();
 		ac.finish();
@@ -613,17 +620,17 @@ public class TotalTest {
 
 		ac.start();
 		for (int i = 0; i < doubleArray1.length; i++) {
-			ac.onRow(new Double[] { new Double(doubleArray1[i]) });
+			ac.onRow(new Double[] { Double.valueOf(doubleArray1[i]) });
 		}
 		ac.finish();
-		assertEquals(new Double(1.0), ac.getValue());
+		assertEquals(Double.valueOf(1.0), ac.getValue());
 
 		ac.start();
 		for (int i = 0; i < doubleArray2.length; i++) {
-			ac.onRow(new Double[] { new Double(doubleArray2[i]) });
+			ac.onRow(new Double[] { Double.valueOf(doubleArray2[i]) });
 		}
 		ac.finish();
-		assertEquals(new Double(4), ac.getValue());
+		assertEquals(Double.valueOf(4), ac.getValue());
 
 		ac.start();
 		for (int i = 0; i < str1.length; i++) {
@@ -666,17 +673,17 @@ public class TotalTest {
 
 		ac.start();
 		for (int i = 0; i < doubleArray1.length; i++) {
-			ac.onRow(new Double[] { new Double(doubleArray1[i]) });
+			ac.onRow(new Double[] { Double.valueOf(doubleArray1[i]) });
 		}
 		ac.finish();
-		assertEquals(new Double(7.0), ac.getValue());
+		assertEquals(Double.valueOf(7.0), ac.getValue());
 
 		ac.start();
 		for (int i = 0; i < doubleArray2.length; i++) {
-			ac.onRow(new Double[] { new Double(doubleArray2[i]) });
+			ac.onRow(new Double[] { Double.valueOf(doubleArray2[i]) });
 		}
 		ac.finish();
-		assertEquals(new Double(34.0), ac.getValue());
+		assertEquals(Double.valueOf(34.0), ac.getValue());
 
 		ac.start();
 		for (int i = 0; i < str1.length; i++) {
@@ -718,17 +725,17 @@ public class TotalTest {
 
 		ac.start();
 		for (int i = 0; i < doubleArray1.length; i++) {
-			ac.onRow(new Double[] { new Double(doubleArray1[i]) });
+			ac.onRow(new Double[] { Double.valueOf(doubleArray1[i]) });
 		}
 		ac.finish();
-		assertEquals(new Double(10.0), ac.getValue());
+		assertEquals(Double.valueOf(10.0), ac.getValue());
 
 		ac.start();
 		for (int i = 0; i < doubleArray2.length; i++) {
-			ac.onRow(new Double[] { new Double(doubleArray2[i]) });
+			ac.onRow(new Double[] { Double.valueOf(doubleArray2[i]) });
 		}
 		ac.finish();
-		assertEquals(new Double(63.0), ac.getValue());
+		assertEquals(Double.valueOf(63.0), ac.getValue());
 
 		ac.start();
 		for (int i = 0; i < str1.length; i++) {
@@ -770,17 +777,17 @@ public class TotalTest {
 
 		ac.start();
 		for (int i = 0; i < doubleArray1.length; i++) {
-			ac.onRow(new Double[] { new Double(doubleArray1[i]) });
+			ac.onRow(new Double[] { Double.valueOf(doubleArray1[i]) });
 		}
 		ac.finish();
-		assertEquals(new Double(1.0), ac.getValue());
+		assertEquals(Double.valueOf(1.0), ac.getValue());
 
 		ac.start();
 		for (int i = 0; i < doubleArray2.length; i++) {
-			ac.onRow(new Double[] { new Double(doubleArray2[i]) });
+			ac.onRow(new Double[] { Double.valueOf(doubleArray2[i]) });
 		}
 		ac.finish();
-		assertEquals(new Double(-43), ac.getValue());
+		assertEquals(Double.valueOf(-43), ac.getValue());
 
 		ac.start();
 		for (int i = 0; i < str1.length; i++) {
@@ -823,17 +830,17 @@ public class TotalTest {
 
 		ac.start();
 		for (int i = 0; i < doubleArray1.length; i++) {
-			ac.onRow(new Double[] { new Double(doubleArray1[i]) });
+			ac.onRow(new Double[] { Double.valueOf(doubleArray1[i]) });
 		}
 		ac.finish();
-		assertEquals(new Double(9.0), ac.getValue());
+		assertEquals(Double.valueOf(9.0), ac.getValue());
 
 		ac.start();
 		for (int i = 0; i < doubleArray2.length; i++) {
-			ac.onRow(new Double[] { new Double(doubleArray2[i]) });
+			ac.onRow(new Double[] { Double.valueOf(doubleArray2[i]) });
 		}
 		ac.finish();
-		assertEquals(new Double(106), ac.getValue());
+		assertEquals(Double.valueOf(106), ac.getValue());
 
 		// String data type returns 0
 		ac.start();
@@ -886,24 +893,24 @@ public class TotalTest {
 
 		ac.start();
 		for (int i = 0; i < doubleArray1.length; i++) {
-			ac.onRow(new Double[] { new Double(doubleArray1[i]) });
+			ac.onRow(new Double[] { Double.valueOf(doubleArray1[i]) });
 		}
 		ac.finish();
-		assertEquals(new Double(5.0), ac.getValue());
+		assertEquals(Double.valueOf(5.0), ac.getValue());
 
 		ac.start();
 		for (int i = 0; i < doubleArray2.length; i++) {
-			ac.onRow(new Double[] { new Double(doubleArray2[i]) });
+			ac.onRow(new Double[] { Double.valueOf(doubleArray2[i]) });
 		}
 		ac.finish();
-		assertEquals(new Double(3.5), ac.getValue());
+		assertEquals(Double.valueOf(3.5), ac.getValue());
 
 		ac.start();
 		for (int i = 0; i < str1.length; i++) {
 			ac.onRow(new Object[] { str1[i] });
 		}
 		ac.finish();
-		assertEquals(new Double(3.5D), ac.getValue());
+		assertEquals(Double.valueOf(3.5D), ac.getValue());
 
 		ac.start();
 		ac.finish();
@@ -956,39 +963,39 @@ public class TotalTest {
 
 		ac.start();
 		for (int i = 0; i < doubleArray1.length; i++) {
-			ac.onRow(new Double[] { new Double(doubleArray1[i]) });
+			ac.onRow(new Double[] { Double.valueOf(doubleArray1[i]) });
 		}
 		ac.finish();
-		assertEquals(new Double(4.0), ac.getValue());
+		assertEquals(Double.valueOf(4.0), ac.getValue());
 
 		ac.start();
 		for (int i = 0; i < doubleArray2.length; i++) {
-			ac.onRow(new Double[] { new Double(doubleArray2[i]) });
+			ac.onRow(new Double[] { Double.valueOf(doubleArray2[i]) });
 		}
 		ac.finish();
-		assertEquals(new Double(4.0), ac.getValue());
+		assertEquals(Double.valueOf(4.0), ac.getValue());
 
 		// double4: unique numbers
 		ac.start();
 		for (int i = 0; i < doubleArray4.length; i++) {
-			ac.onRow(new Double[] { new Double(doubleArray4[i]) });
+			ac.onRow(new Double[] { Double.valueOf(doubleArray4[i]) });
 		}
 		ac.finish();
 		assertEquals(null, ac.getValue());
 		// double 5: mutiple mode, return the first appeared mode
 		ac.start();
 		for (int i = 0; i < doubleArray5.length; i++) {
-			ac.onRow(new Double[] { new Double(doubleArray5[i]) });
+			ac.onRow(new Double[] { Double.valueOf(doubleArray5[i]) });
 		}
 		ac.finish();
-		assertEquals(new Double(1.0), ac.getValue());
+		assertEquals(Double.valueOf(1.0), ac.getValue());
 
 		ac.start();
 		for (int i = 0; i < doubleArray6.length; i++) {
-			ac.onRow(new Double[] { new Double(doubleArray6[i]) });
+			ac.onRow(new Double[] { Double.valueOf(doubleArray6[i]) });
 		}
 		ac.finish();
-		assertEquals(new Double(1.0), ac.getValue());
+		assertEquals(Double.valueOf(1.0), ac.getValue());
 
 		ac.start();
 		for (int i = 0; i < str1.length; i++) {
@@ -1010,11 +1017,11 @@ public class TotalTest {
 		}
 
 		ac.start();
-		ac.onRow(new Double[] { new Double(4) });
-		ac.onRow(new Double[] { new Double(4) });
-		ac.onRow(new Double[] { new Double(3) });
+		ac.onRow(new Double[] { Double.valueOf(4) });
+		ac.onRow(new Double[] { Double.valueOf(4) });
+		ac.onRow(new Double[] { Double.valueOf(3) });
 		ac.finish();
-		assertEquals(ac.getValue(), new Double(4));
+		assertEquals(ac.getValue(), Double.valueOf(4));
 		// mode test for Date
 		// 1: no mode date
 		ac.start();
@@ -1053,17 +1060,17 @@ public class TotalTest {
 
 		ac.start();
 		for (int i = 0; i < doubleArray1.length; i++) {
-			ac.onRow(new Double[] { new Double(doubleArray1[i]) });
+			ac.onRow(new Double[] { Double.valueOf(doubleArray1[i]) });
 		}
 		ac.finish();
 		assertEquals(2.445598573141631D, ac.getValue());
 
 		ac.start();
 		for (int i = 0; i < doubleArray2.length; i++) {
-			ac.onRow(new Double[] { new Double(doubleArray2[i]) });
+			ac.onRow(new Double[] { Double.valueOf(doubleArray2[i]) });
 		}
 		ac.finish();
-		assertEquals(new Double(26.560422510872147), ac.getValue());
+		assertEquals(Double.valueOf(26.560422510872147), ac.getValue());
 
 		ac.start();
 		for (int i = 0; i < str1.length; i++) {
@@ -1107,17 +1114,17 @@ public class TotalTest {
 
 		ac.start();
 		for (int i = 0; i < doubleArray1.length; i++) {
-			ac.onRow(new Double[] { new Double(doubleArray1[i]) });
+			ac.onRow(new Double[] { Double.valueOf(doubleArray1[i]) });
 		}
 		ac.finish();
 		assertEquals(5.980952380952381D, ac.getValue());
 
 		ac.start();
 		for (int i = 0; i < doubleArray2.length; i++) {
-			ac.onRow(new Double[] { new Double(doubleArray2[i]) });
+			ac.onRow(new Double[] { Double.valueOf(doubleArray2[i]) });
 		}
 		ac.finish();
-		assertEquals(new Double(705.4560439560439), ac.getValue());
+		assertEquals(Double.valueOf(705.4560439560439), ac.getValue());
 
 		ac.start();
 		for (int i = 0; i < str1.length; i++) {
@@ -1161,52 +1168,52 @@ public class TotalTest {
 
 		ac.start();
 		for (int i = 0; i < doubleArray1.length; i++) {
-			ac.onRow(new Double[] { new Double(doubleArray1[i]), new Double(weight[i]) });
+			ac.onRow(new Double[] { Double.valueOf(doubleArray1[i]), Double.valueOf(weight[i]) });
 		}
 		ac.finish();
 
-		assertEquals(new Double(5.343042071197409), ac.getValue());
+		assertEquals(Double.valueOf(5.343042071197409), ac.getValue());
 
 		ac.start();
 		for (int i = 0; i < doubleArray2.length; i++) {
-			ac.onRow(new Double[] { new Double(doubleArray2[i]), new Double(weight[i]) });
+			ac.onRow(new Double[] { Double.valueOf(doubleArray2[i]), Double.valueOf(weight[i]) });
 		}
 		ac.finish();
 
-		assertEquals(new Double(3.236104279390063), ac.getValue());
+		assertEquals(Double.valueOf(3.236104279390063), ac.getValue());
 
 		ac.start();
 		for (int i = 0; i < str1.length; i++) {
-			ac.onRow(new Object[] { str1[i], new Double(weight[i]) });
+			ac.onRow(new Object[] { str1[i], Double.valueOf(weight[i]) });
 		}
 		ac.finish();
 
 		assertEquals(3.236104279390063D, ac.getValue());
 
 		ac.start();
-		ac.onRow(new Object[] { new Double(1), new Double(1) });
-		ac.onRow(new Object[] { new Double(2), new Double(2) });
+		ac.onRow(new Object[] { Double.valueOf(1), Double.valueOf(1) });
+		ac.onRow(new Object[] { Double.valueOf(2), Double.valueOf(2) });
 		ac.finish();
-		assertEquals(new Double(1.6666666666666667), ac.getValue());
+		assertEquals(Double.valueOf(1.6666666666666667), ac.getValue());
 
 		ac.start();
-		ac.onRow(new Object[] { null, new Double(3) });
-		ac.onRow(new Object[] { new Double(2), new Double(2) });
-		ac.onRow(new Object[] { new Double(2), null });
+		ac.onRow(new Object[] { null, Double.valueOf(3) });
+		ac.onRow(new Object[] { Double.valueOf(2), Double.valueOf(2) });
+		ac.onRow(new Object[] { Double.valueOf(2), null });
 		ac.finish();
-		assertEquals(new Double(2), ac.getValue());
+		assertEquals(Double.valueOf(2), ac.getValue());
 
 		ac.start();
-		ac.onRow(new Object[] { new Double(1), new Double(3) });
-		ac.onRow(new Object[] { new Double(1), new Double(-3) });
+		ac.onRow(new Object[] { Double.valueOf(1), Double.valueOf(3) });
+		ac.onRow(new Object[] { Double.valueOf(1), Double.valueOf(-3) });
 		ac.finish();
 		assertEquals(Double.NaN, ac.getValue());
 
 		ac.start();
-		ac.onRow(new Object[] { new Double(1), new Double(2) });
-		ac.onRow(new Object[] { new Double(2), new Double(-4) });
+		ac.onRow(new Object[] { Double.valueOf(1), Double.valueOf(2) });
+		ac.onRow(new Object[] { Double.valueOf(2), Double.valueOf(-4) });
 		ac.finish();
-		assertEquals(new Double(3.0), ac.getValue());
+		assertEquals(Double.valueOf(3.0), ac.getValue());
 
 		ac.start();
 		ac.finish();
@@ -1223,7 +1230,7 @@ public class TotalTest {
 		// test Total.WeightedAve() for BigDecimal data
 		ac.start();
 		for (int i = 0; i < bigDecimalArray.length; i++) {
-			ac.onRow(new Object[] { bigDecimalArray[i], new Double(weight[i]) });
+			ac.onRow(new Object[] { bigDecimalArray[i], Double.valueOf(weight[i]) });
 		}
 		ac.finish();
 		Object ret = ac.getValue();
@@ -1250,21 +1257,21 @@ public class TotalTest {
 
 		ac.start();
 		for (int i = 0; i < doubleArray1.length; i++) {
-			ac.onRow(new Object[] { new Double(doubleArray1[i]), new Integer(8) });
-			assertEquals(new Double(values1[i]), ac.getValue());
+			ac.onRow(new Object[] { Double.valueOf(doubleArray1[i]), Integer.valueOf(8) });
+			assertEquals(Double.valueOf(values1[i]), ac.getValue());
 		}
 		ac.finish();
 
 		ac.start();
 		for (int i = 0; i < doubleArray2.length; i++) {
-			ac.onRow(new Object[] { new Double(doubleArray2[i]), new Integer(6) });
+			ac.onRow(new Object[] { Double.valueOf(doubleArray2[i]), Integer.valueOf(6) });
 			assertEquals(Double.valueOf(values2[i]), ac.getValue());
 		}
 		ac.finish();
 
 		ac.start();
 		for (int i = 0; i < str1.length; i++) {
-			ac.onRow(new Object[] { str1[i], new Integer(6) });
+			ac.onRow(new Object[] { str1[i], Integer.valueOf(6) });
 			assertEquals(Double.valueOf(values2[i]), ac.getValue());
 		}
 		ac.finish();
@@ -1367,14 +1374,14 @@ public class TotalTest {
 
 		ac.start();
 		for (int i = 0; i < doubleArray1.length; i++) {
-			ac.onRow(new Double[] { new Double(doubleArray1[i]), new Double(5) });
+			ac.onRow(new Double[] { Double.valueOf(doubleArray1[i]), Double.valueOf(5) });
 		}
 		ac.finish();
 
 		ac.start();
 		for (int i = 0; i < doubleArray1.length; i++) {
-			ac.onRow(new Double[] { new Double(doubleArray1[i]), new Double(5) });
-			assertEquals(new Boolean(doubleArray1TopBottom[i]), ac.getValue());
+			ac.onRow(new Double[] { Double.valueOf(doubleArray1[i]), Double.valueOf(5) });
+			assertEquals(Boolean.valueOf(doubleArray1TopBottom[i]), ac.getValue());
 		}
 		ac.finish();
 
@@ -1387,25 +1394,25 @@ public class TotalTest {
 		assertTrue(!ag.getParameterDefn()[1].isOptional());
 
 		ac.start();
-		ac.onRow(new Double[] { new Double(6), new Double(5) });
+		ac.onRow(new Double[] { Double.valueOf(6), Double.valueOf(5) });
 		ac.finish();
 		ac.start();
-		ac.onRow(new Double[] { new Double(6), new Double(5) });
+		ac.onRow(new Double[] { Double.valueOf(6), Double.valueOf(5) });
 		ac.finish();
 
-		assertEquals(new Boolean(true), ac.getValue());
+		assertEquals(Boolean.valueOf(true), ac.getValue());
 
 		// test Total.ISTOPN() for BigDecimal data
 		ac = ag.newAccumulator();
 		ac.start();
 		for (int i = 0; i < bigDecimalArray.length; i++) {
-			ac.onRow(new Object[] { bigDecimalArray[i], new Double(5) });
+			ac.onRow(new Object[] { bigDecimalArray[i], Double.valueOf(5) });
 		}
 		ac.finish();
 		ac.start();
 		for (int i = 0; i < bigDecimalArray.length; i++) {
-			ac.onRow(new Object[] { bigDecimalArray[i], new Double(5) });
-			assertEquals(new Boolean(doubleArray1TopBottom[i]), ac.getValue());
+			ac.onRow(new Object[] { bigDecimalArray[i], Double.valueOf(5) });
+			assertEquals(Boolean.valueOf(doubleArray1TopBottom[i]), ac.getValue());
 		}
 		ac.finish();
 
@@ -1419,13 +1426,13 @@ public class TotalTest {
 
 		ac.start();
 		for (int i = 0; i < doubleArray1.length; i++) {
-			ac.onRow(new Double[] { new Double(doubleArray1[i]), new Double(33) });
+			ac.onRow(new Double[] { Double.valueOf(doubleArray1[i]), Double.valueOf(33) });
 		}
 		ac.finish();
 		ac.start();
 		for (int i = 0; i < doubleArray1.length; i++) {
-			ac.onRow(new Double[] { new Double(doubleArray1[i]), new Double(33) });
-			assertEquals(new Boolean(doubleArray1TopBottom[i]), ac.getValue());
+			ac.onRow(new Double[] { Double.valueOf(doubleArray1[i]), Double.valueOf(33) });
+			assertEquals(Boolean.valueOf(doubleArray1TopBottom[i]), ac.getValue());
 		}
 		ac.finish();
 
@@ -1433,13 +1440,13 @@ public class TotalTest {
 		ac = ag.newAccumulator();
 		ac.start();
 		for (int i = 0; i < bigDecimalArray.length; i++) {
-			ac.onRow(new Object[] { bigDecimalArray[i], new Double(33) });
+			ac.onRow(new Object[] { bigDecimalArray[i], Double.valueOf(33) });
 		}
 		ac.finish();
 		ac.start();
 		for (int i = 0; i < bigDecimalArray.length; i++) {
-			ac.onRow(new Object[] { bigDecimalArray[i], new Double(33) });
-			assertEquals(new Boolean(doubleArray1TopBottom[i]), ac.getValue());
+			ac.onRow(new Object[] { bigDecimalArray[i], Double.valueOf(33) });
+			assertEquals(Boolean.valueOf(doubleArray1TopBottom[i]), ac.getValue());
 		}
 		ac.finish();
 
@@ -1452,13 +1459,13 @@ public class TotalTest {
 		assertTrue(!ag.getParameterDefn()[1].isOptional());
 
 		ac.start();
-		ac.onRow(new Double[] { new Double(6), new Double(100) });
+		ac.onRow(new Double[] { Double.valueOf(6), Double.valueOf(100) });
 		ac.finish();
 		ac.start();
-		ac.onRow(new Double[] { new Double(6), new Double(100) });
+		ac.onRow(new Double[] { Double.valueOf(6), Double.valueOf(100) });
 		ac.finish();
 
-		assertEquals(new Boolean(true), ac.getValue());
+		assertEquals(Boolean.valueOf(true), ac.getValue());
 	}
 
 	/**
@@ -1477,14 +1484,14 @@ public class TotalTest {
 
 		ac.start();
 		for (int i = 0; i < doubleArray3.length; i++) {
-			ac.onRow(new Double[] { doubleArray3[i], new Double(2) });
+			ac.onRow(new Double[] { doubleArray3[i], Double.valueOf(2) });
 		}
 		ac.finish();
 
 		ac.start();
 		for (int i = 0; i < doubleArray3.length; i++) {
-			ac.onRow(new Double[] { doubleArray3[i], new Double(2) });
-			assertEquals(new Boolean(doubleArray3TopBottom[i]), ac.getValue());
+			ac.onRow(new Double[] { doubleArray3[i], Double.valueOf(2) });
+			assertEquals(Boolean.valueOf(doubleArray3TopBottom[i]), ac.getValue());
 		}
 		ac.finish();
 	}
@@ -1501,13 +1508,13 @@ public class TotalTest {
 
 		ac.start();
 		for (int i = 0; i < doubleArray1.length; i++) {
-			ac.onRow(new Double[] { new Double(doubleArray1[i]), new Double(10) });
+			ac.onRow(new Double[] { Double.valueOf(doubleArray1[i]), Double.valueOf(10) });
 		}
 		ac.finish();
 		ac.start();
 		for (int i = 0; i < doubleArray1.length; i++) {
-			ac.onRow(new Double[] { new Double(doubleArray1[i]), new Double(10) });
-			assertEquals(new Boolean(!doubleArray1TopBottom[i]), ac.getValue());
+			ac.onRow(new Double[] { Double.valueOf(doubleArray1[i]), Double.valueOf(10) });
+			assertEquals(Boolean.valueOf(!doubleArray1TopBottom[i]), ac.getValue());
 		}
 		ac.finish();
 
@@ -1515,13 +1522,13 @@ public class TotalTest {
 		ac = ag.newAccumulator();
 		ac.start();
 		for (int i = 0; i < bigDecimalArray.length; i++) {
-			ac.onRow(new Object[] { bigDecimalArray[i], new Double(10) });
+			ac.onRow(new Object[] { bigDecimalArray[i], Double.valueOf(10) });
 		}
 		ac.finish();
 		ac.start();
 		for (int i = 0; i < bigDecimalArray.length; i++) {
-			ac.onRow(new Object[] { bigDecimalArray[i], new Double(10) });
-			assertEquals(new Boolean(!doubleArray1TopBottom[i]), ac.getValue());
+			ac.onRow(new Object[] { bigDecimalArray[i], Double.valueOf(10) });
+			assertEquals(Boolean.valueOf(!doubleArray1TopBottom[i]), ac.getValue());
 		}
 		ac.finish();
 
@@ -1535,14 +1542,14 @@ public class TotalTest {
 
 		ac.start();
 		for (int i = 0; i < doubleArray1.length; i++) {
-			ac.onRow(new Double[] { new Double(doubleArray1[i]), new Double(66) });
+			ac.onRow(new Double[] { Double.valueOf(doubleArray1[i]), Double.valueOf(66) });
 		}
 		ac.finish();
 
 		ac.start();
 		for (int i = 0; i < doubleArray1.length; i++) {
-			ac.onRow(new Double[] { new Double(doubleArray1[i]), new Double(66) });
-			assertEquals(new Boolean(!doubleArray1TopBottom[i]), ac.getValue());
+			ac.onRow(new Double[] { Double.valueOf(doubleArray1[i]), Double.valueOf(66) });
+			assertEquals(Boolean.valueOf(!doubleArray1TopBottom[i]), ac.getValue());
 		}
 		ac.finish();
 
@@ -1550,13 +1557,13 @@ public class TotalTest {
 		ac = ag.newAccumulator();
 		ac.start();
 		for (int i = 0; i < bigDecimalArray.length; i++) {
-			ac.onRow(new Object[] { bigDecimalArray[i], new Double(66) });
+			ac.onRow(new Object[] { bigDecimalArray[i], Double.valueOf(66) });
 		}
 		ac.finish();
 		ac.start();
 		for (int i = 0; i < bigDecimalArray.length; i++) {
-			ac.onRow(new Object[] { bigDecimalArray[i], new Double(66) });
-			assertEquals(new Boolean(!doubleArray1TopBottom[i]), ac.getValue());
+			ac.onRow(new Object[] { bigDecimalArray[i], Double.valueOf(66) });
+			assertEquals(Boolean.valueOf(!doubleArray1TopBottom[i]), ac.getValue());
 		}
 		ac.finish();
 	}
@@ -1573,14 +1580,14 @@ public class TotalTest {
 
 		ac.start();
 		for (int i = 0; i < doubleArray3.length; i++) {
-			ac.onRow(new Object[] { doubleArray3[i], new Boolean(false) });
+			ac.onRow(new Object[] { doubleArray3[i], Boolean.valueOf(false) });
 		}
 		ac.finish();
 
 		ac.start();
 		for (int i = 0; i < doubleArray3.length; i++) {
-			ac.onRow(new Object[] { doubleArray3[i], new Integer(0) });
-			assertEquals(new Integer(doubleArray3RankDec[i]), ac.getValue());
+			ac.onRow(new Object[] { doubleArray3[i], Integer.valueOf(0) });
+			assertEquals(Integer.valueOf(doubleArray3RankDec[i]), ac.getValue());
 		}
 		ac.finish();
 
@@ -1589,13 +1596,13 @@ public class TotalTest {
 
 		ac.start();
 		for (int i = 0; i < doubleArray3.length; i++) {
-			ac.onRow(new Object[] { doubleArray3[i], new Boolean(true) });
+			ac.onRow(new Object[] { doubleArray3[i], Boolean.valueOf(true) });
 		}
 		ac.finish();
 		ac.start();
 		for (int i = 0; i < doubleArray3.length; i++) {
-			ac.onRow(new Object[] { doubleArray3[i], new Integer(1) });
-			assertEquals(new Integer(doubleArray3RankAsc[i]), ac.getValue());
+			ac.onRow(new Object[] { doubleArray3[i], Integer.valueOf(1) });
+			assertEquals(Integer.valueOf(doubleArray3RankAsc[i]), ac.getValue());
 		}
 		ac.finish();
 
@@ -1603,14 +1610,73 @@ public class TotalTest {
 		ac = ag.newAccumulator();
 		ac.start();
 		for (int i = 0; i < bigDecimalArray.length; i++) {
-			ac.onRow(new Object[] { bigDecimalArray[i], new Boolean(true) });
+			ac.onRow(new Object[] { bigDecimalArray[i], Boolean.valueOf(true) });
 		}
 		ac.finish();
 		ac.start();
 		for (int i = 0; i < bigDecimalArray.length; i++) {
-			ac.onRow(new Object[] { bigDecimalArray[i], new Double(0) });
-			assertEquals(new Integer(bigDecimalRankAsc[i]), ac.getValue());
+			ac.onRow(new Object[] { bigDecimalArray[i], Double.valueOf(0) });
+			assertEquals(Integer.valueOf(bigDecimalRankAsc[i]), ac.getValue());
 		}
+		ac.finish();
+	}
+
+	@Test
+	public void testTotalDenseRank() throws Exception {
+		IAggrFunction ag = buildInAggrFactory.getAggregation("denserank");
+		Accumulator ac = ag.newAccumulator();
+		assertEquals(IBuildInAggregation.TOTAL_DENSERANK_FUNC, ag.getName());
+		assertEquals(IAggrFunction.RUNNING_AGGR, ag.getType());
+		assertEquals(2, ag.getParameterDefn().length);
+		assertTrue(!ag.getParameterDefn()[0].isOptional());
+		assertFalse(!ag.getParameterDefn()[1].isOptional());
+
+		ac.start();
+		for (int i = 0; i < doubleArray3.length; i++) {
+			ac.onRow(new Object[] { doubleArray3[i], Boolean.valueOf(false) });
+		}
+		ac.finish();
+
+		ac.start();
+		int[] doubleResultArray3DenseRankDec = new int[doubleArray3.length];
+		for (int i = 0; i < doubleArray3.length; i++) {
+			ac.onRow(new Object[] { doubleArray3[i], Integer.valueOf(0) });
+			doubleResultArray3DenseRankDec[i] = ((Integer) ac.getValue()).intValue();
+		}
+		assertArrayEquals(doubleArray3DenseRankDec, doubleResultArray3DenseRankDec);
+		ac.finish();
+
+		ag = buildInAggrFactory.getAggregation("denserank");
+		ac = ag.newAccumulator();
+
+		ac.start();
+		for (int i = 0; i < doubleArray3.length; i++) {
+			ac.onRow(new Object[] { doubleArray3[i], Boolean.valueOf(true) });
+		}
+		ac.finish();
+		ac.start();
+		int[] doubleResultArray3DenseRankAsc = new int[doubleArray3.length];
+		for (int i = 0; i < doubleArray3.length; i++) {
+			ac.onRow(new Object[] { doubleArray3[i], Integer.valueOf(1) });
+			doubleResultArray3DenseRankAsc[i] = ((Integer) ac.getValue()).intValue();
+		}
+		assertArrayEquals(doubleArray3DenseRankAsc, doubleResultArray3DenseRankAsc);
+		ac.finish();
+
+		// test Total.denserank() for BigDecimal data
+		ac = ag.newAccumulator();
+		ac.start();
+		for (int i = 0; i < bigDecimalArray.length; i++) {
+			ac.onRow(new Object[] { bigDecimalArray[i], Boolean.valueOf(true) });
+		}
+		ac.finish();
+		ac.start();
+		int[] bigDecimalResultArray3DenseRankAsc = new int[bigDecimalArray.length];
+		for (int i = 0; i < bigDecimalArray.length; i++) {
+			ac.onRow(new Object[] { bigDecimalArray[i], Double.valueOf(0) });
+			bigDecimalResultArray3DenseRankAsc[i] = ((Integer) ac.getValue()).intValue();
+		}
+		assertArrayEquals(bigDecimalDenseRankAsc, bigDecimalResultArray3DenseRankAsc);
 		ac.finish();
 	}
 
@@ -1632,7 +1698,7 @@ public class TotalTest {
 		for (int i = 0; i < doubleArray3.length; i++) {
 			ac.onRow(new Object[] { doubleArray3[i] });
 			assertEquals(doubleArray3PercentRank[i],
-					new Double((((Double) ac.getValue()).doubleValue() * 1000)).intValue());
+					Double.valueOf((((Double) ac.getValue()).doubleValue() * 1000)).intValue());
 		}
 		ac.finish();
 
@@ -1647,7 +1713,7 @@ public class TotalTest {
 		for (int i = 0; i < bigDecimalArray.length; i++) {
 			ac.onRow(new Object[] { bigDecimalArray[i] });
 			assertEquals(bigDecimalPercentRank[i],
-					new Double((((Double) ac.getValue()).doubleValue() * 1000)).intValue());
+					Double.valueOf((((Double) ac.getValue()).doubleValue() * 1000)).intValue());
 		}
 		ac.finish();
 	}
@@ -1670,8 +1736,8 @@ public class TotalTest {
 		ac.start();
 		for (int i = 0; i < doubleArray3.length; i++) {
 			ac.onRow(new Object[] { doubleArray3[i] });
-			assertEquals(doubleArray3PercentSum[i] == null ? new Integer(0) : doubleArray3PercentSum[i],
-					new Integer((int) (Double.parseDouble(ac.getValue().toString()) * 1000)));
+			assertEquals(doubleArray3PercentSum[i] == null ? Integer.valueOf(0) : doubleArray3PercentSum[i],
+					Integer.valueOf((int) (Double.parseDouble(ac.getValue().toString()) * 1000)));
 		}
 		ac.finish();
 		// DataException should be throwed if the parameter is non-numeric
@@ -1697,7 +1763,7 @@ public class TotalTest {
 			ac.onRow(new Object[] { bigDecimalArray[i] });
 			Object ret = ac.getValue();
 			assertTrue(ret instanceof Double);
-			assertEquals(bigDecimalPercentSum[i], new Double((((Number) ret).doubleValue() * 1000)).intValue());
+			assertEquals(bigDecimalPercentSum[i], Double.valueOf((((Number) ret).doubleValue() * 1000)).intValue());
 		}
 		ac.finish();
 	}
@@ -1714,48 +1780,48 @@ public class TotalTest {
 
 		ac.start();
 		for (int i = 0; i < doubleArray3.length; i++) {
-			ac.onRow(new Object[] { doubleArray3[i], new Double(0.1) });
+			ac.onRow(new Object[] { doubleArray3[i], Double.valueOf(0.1) });
 		}
 		ac.finish();
 		Object value = ac.getValue();
-		assertEquals(value, new Double(10.0));
+		assertEquals(value, Double.valueOf(10.0));
 
 		ac.start();
 		for (int i = 0; i < doubleArray3.length; i++) {
-			ac.onRow(new Object[] { doubleArray3[i], new Double(0) });
+			ac.onRow(new Object[] { doubleArray3[i], Double.valueOf(0) });
 		}
 		ac.finish();
 		value = ac.getValue();
-		assertEquals(value, new Double(10));
+		assertEquals(value, Double.valueOf(10));
 
 		ac.start();
 		for (int i = 0; i < doubleArray3.length; i++) {
-			ac.onRow(new Object[] { doubleArray3[i], new Double(1) });
+			ac.onRow(new Object[] { doubleArray3[i], Double.valueOf(1) });
 		}
 		ac.finish();
 		value = ac.getValue();
-		assertEquals(value, new Double(300));
+		assertEquals(value, Double.valueOf(300));
 
 		ac.start();
 		for (int i = 0; i < doubleArray3.length; i++) {
-			ac.onRow(new Object[] { doubleArray3[i], new Double(0.7) });
+			ac.onRow(new Object[] { doubleArray3[i], Double.valueOf(0.7) });
 		}
 		ac.finish();
 		value = ac.getValue();
-		assertEquals(value, new Double(70));
+		assertEquals(value, Double.valueOf(70));
 
 		ac.start();
 		for (int i = 0; i < doubleArray3.length; i++) {
-			ac.onRow(new Object[] { doubleArray3[i], new Double(0.35) });
+			ac.onRow(new Object[] { doubleArray3[i], Double.valueOf(0.35) });
 		}
 		ac.finish();
 		value = ac.getValue();
-		assertEquals(value, new Double(17.5));
+		assertEquals(value, Double.valueOf(17.5));
 
 		try {
 			ac.start();
 			for (int i = 0; i < doubleArray3.length; i++) {
-				ac.onRow(new Object[] { doubleArray3[i], new Double(-1) });
+				ac.onRow(new Object[] { doubleArray3[i], Double.valueOf(-1) });
 			}
 			ac.finish();
 			fail("should not arrive here");
@@ -1767,13 +1833,13 @@ public class TotalTest {
 		ac.start();
 		for (int i = 0; i < doubleArray3.length; i++) {
 			try {
-				ac.onRow(new Object[] { doubleArray3[i], new Double(-0.9) });
+				ac.onRow(new Object[] { doubleArray3[i], Double.valueOf(-0.9) });
 				fail();
 			} catch (DataException e) {
 			}
 
 			try {
-				ac.onRow(new Object[] { doubleArray3[i], new Double(4.1) });
+				ac.onRow(new Object[] { doubleArray3[i], Double.valueOf(4.1) });
 				fail();
 			} catch (DataException e) {
 			}
@@ -1784,7 +1850,7 @@ public class TotalTest {
 		ac = ag.newAccumulator();
 		ac.start();
 		for (int i = 0; i < bigDecimalArray.length; i++) {
-			ac.onRow(new Object[] { bigDecimalArray[i], new Double(0.1) });
+			ac.onRow(new Object[] { bigDecimalArray[i], Double.valueOf(0.1) });
 		}
 		ac.finish();
 		Object ret = ac.getValue();
@@ -1804,48 +1870,48 @@ public class TotalTest {
 
 		ac.start();
 		for (int i = 0; i < doubleArray3.length; i++) {
-			ac.onRow(new Object[] { doubleArray3[i], new Double(0) });
+			ac.onRow(new Object[] { doubleArray3[i], Double.valueOf(0) });
 		}
 		ac.finish();
 		Object value = ac.getValue();
-		assertEquals(value, new Double(10));
+		assertEquals(value, Double.valueOf(10));
 
 		ac.start();
 		for (int i = 0; i < doubleArray3.length; i++) {
-			ac.onRow(new Object[] { doubleArray3[i], new Double(1) });
+			ac.onRow(new Object[] { doubleArray3[i], Double.valueOf(1) });
 		}
 		ac.finish();
 		value = ac.getValue();
-		assertEquals(value, new Double(12.5));
+		assertEquals(value, Double.valueOf(12.5));
 
 		ac.start();
 		for (int i = 0; i < doubleArray3.length; i++) {
-			ac.onRow(new Object[] { doubleArray3[i], new Double(2) });
+			ac.onRow(new Object[] { doubleArray3[i], Double.valueOf(2) });
 		}
 		ac.finish();
 		value = ac.getValue();
-		assertEquals(value, new Double(30));
+		assertEquals(value, Double.valueOf(30));
 
 		ac.start();
 		for (int i = 0; i < doubleArray3.length; i++) {
-			ac.onRow(new Object[] { doubleArray3[i], new Double(3) });
+			ac.onRow(new Object[] { doubleArray3[i], Double.valueOf(3) });
 		}
 		ac.finish();
 		value = ac.getValue();
-		assertEquals(value, new Double(85));
+		assertEquals(value, Double.valueOf(85));
 
 		ac.start();
 		for (int i = 0; i < doubleArray3.length; i++) {
-			ac.onRow(new Object[] { doubleArray3[i], new Double(4) });
+			ac.onRow(new Object[] { doubleArray3[i], Double.valueOf(4) });
 		}
 		ac.finish();
 		value = ac.getValue();
-		assertEquals(value, new Double(300));
+		assertEquals(value, Double.valueOf(300));
 
 		try {
 			ac.start();
 			for (int i = 0; i < doubleArray3.length; i++) {
-				ac.onRow(new Object[] { doubleArray3[i], new Double(5) });
+				ac.onRow(new Object[] { doubleArray3[i], Double.valueOf(5) });
 			}
 			ac.finish();
 			fail("should not arrive here");
@@ -1855,7 +1921,7 @@ public class TotalTest {
 		ac = ag.newAccumulator();
 		ac.start();
 		for (int i = 0; i < bigDecimalArray.length; i++) {
-			ac.onRow(new Object[] { bigDecimalArray[i], new Double(1) });
+			ac.onRow(new Object[] { bigDecimalArray[i], Double.valueOf(1) });
 		}
 		ac.finish();
 		Object ret = ac.getValue();
@@ -1873,8 +1939,8 @@ public class TotalTest {
 
 		ac.start();
 		for (int i = 0; i < doubleArray1.length; i++) {
-			ac.onRow(new Double[] { new Double(doubleArray1[i]), new Double(5) });
-			assertEquals(new Integer(i + 1), ac.getValue());
+			ac.onRow(new Double[] { Double.valueOf(doubleArray1[i]), Double.valueOf(5) });
+			assertEquals(Integer.valueOf(i + 1), ac.getValue());
 		}
 		ac.finish();
 
@@ -1883,14 +1949,14 @@ public class TotalTest {
 			ac.onRow(new Object[] { anyObjectArray[i] });
 		}
 		ac.finish();
-		assertEquals(new Integer(5), ac.getValue());
+		assertEquals(Integer.valueOf(5), ac.getValue());
 
 		ac.start();
 		for (int i = 0; i < anyObjectArray.length; i++) {
 			ac.onRow(null);
 		}
 		ac.finish();
-		assertEquals(new Integer(8), ac.getValue());
+		assertEquals(Integer.valueOf(8), ac.getValue());
 	}
 
 }
